--- a/package.json
+++ b/package.json
@@ -10,12 +10,44 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@iconify/react": "^5.2.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/lab": "6.0.0-beta.22",
+    "@mui/material": "^6.3.1",
+    "@mui/styled-engine": "^6.3.1",
+    "@mui/styled-engine-sc": "^6.3.1",
+    "@tanstack/react-query": "^5.64.1",
+    "@types/node": "^22.10.6",
+    "antd": "^5.23.1",
+    "axios": "^1.7.9",
+    "classnames": "^2.5.1",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.17.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-location": "^3.3.4",
+    "react-location-jsurl": "^3.3.3",
+    "react-location-rank-routes": "^3.3.3",
+    "react-medium-image-zoom": "^5.2.13",
+    "react-spinners": "^0.15.0",
+    "react-tooltip": "^5.28.0",
+    "react-topbar-progress-indicator": "^4.1.1",
+    "tailwind-merge": "^2.6.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
+    "@types/lodash": "^4",
+    "@types/react": "^19.0.6",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -27,6 +59,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.7"
   }
 }
