--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-spinners": "^0.15.0",
     "react-tooltip": "^5.28.0",
     "react-topbar-progress-indicator": "^4.1.1",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
   },
