--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-location-rank-routes": "^3.3.3",
     "react-medium-image-zoom": "^5.2.13",
     "react-spinners": "^0.15.0",
+    "react-swipeable": "^7.0.2",
     "react-tooltip": "^5.28.0",
     "react-topbar-progress-indicator": "^4.1.1",
     "swiper": "^11.2.1",
