--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
@@ -46,6 +47,7 @@
     "react-swipeable": "^7.0.2",
     "react-tooltip": "^5.28.0",
     "react-topbar-progress-indicator": "^4.1.1",
+    "recharts": "^2.15.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
