--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^6.3.1",
     "@mui/styled-engine": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
+    "@mui/x-data-grid": "^7.25.0",
     "@tanstack/react-query": "^5.64.1",
     "@types/node": "^22.10.6",
     "antd": "^5.23.1",
