--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/styled-engine": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
     "@mui/x-data-grid": "^7.25.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.64.1",
     "@types/node": "^22.10.6",
     "antd": "^5.23.1",
@@ -44,6 +45,7 @@
     "react-location-jsurl": "^3.3.3",
     "react-location-rank-routes": "^3.3.3",
     "react-medium-image-zoom": "^5.2.13",
+    "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
     "react-swipeable": "^7.0.2",
     "react-tooltip": "^5.28.0",
