--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-tooltip": "^5.28.0",
     "react-topbar-progress-indicator": "^4.1.1",
     "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
