--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
     branches: [ "main" ]
 
 env:
-  NODE_VERSION: '20'  # Recommended LTS version
+  NODE_VERSION: '20'
+  PROJECT_DIR: "/root/birthsales-frontend"
 
 jobs:
   test:
@@ -33,8 +34,8 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-
-    - name: Build production app
+      
+    - name: Run build
       run: npm run build
 
   deploy:
@@ -66,12 +67,17 @@ jobs:
     - name: Build production app
       run: npm run build
       
-    - name: Install sshpass for password authentication
+    - name: Install sshpass
       run: sudo apt-get install -y sshpass
       
     - name: Deploy React App
       run: |
-        # Execute deployment script on server
+        # Transfer built files to server
+        sshpass -p "${{ secrets.DO_PASSWORD }}" scp -o StrictHostKeyChecking=no \
+        -r dist/* \
+        ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }}:/tmp/react-build/
+        
+        # Execute deployment script
         sshpass -p "${{ secrets.DO_PASSWORD }}" ssh -o StrictHostKeyChecking=no \
-        ${{ secrets.DO_USERNAME || 'root' }}@${{ secrets.DO_HOST }} \
-        "python3 deploy_react.py"
+        ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} \
+        "python3 /root/birthsales-frontend/deploy_react.py"
