--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
     "react-swipeable": "^7.0.2",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "react-topbar-progress-indicator": "^4.1.1",
     "recharts": "^2.15.1",
